DiagramGenerators/antlr/crmlParser.js
// Generated from crml.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import crmlListener from './crmlListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class crmlParser extends antlr4.Parser {

    static grammarFileName = "crml.g4";
    static literalNames = [ null, "'is'", "'{'", "'}'", "';'", "'flatten'", 
                            "','", "'union'", "'model'", "'package'", "'library'", 
                            "'class'", "'extends'", "'parameter'", "'Category'", 
                            "'='", "'('", "')'", "'external'", "'Operator'", 
                            "'['", "']'", "'Template'", "'apply'", "'on'", 
                            "'type'", "'alias'", "'forbid'", "'fixed'", 
                            "'.'", "'Integer'", "'Real'", "'Boolean'", "'String'", 
                            "'Clock'", "'Set'", "'Period'", "'Periods'", 
                            "'Event'", "'Requirement'", "'true'", "'false'", 
                            "'undecided'", "'undefined'", "'time'", "'trim'", 
                            "'sum'", "'proj'", "'when'", "'then'", "'integrate'", 
                            "'tick'", "'element'", "'terminate'", "'at'", 
                            "'evaluate'", "'if'", "'else'", "'new'", "'start'", 
                            "'end'", "'and'", "'*'", "'+'", "'-'", "'/'", 
                            "'with'", "'master'", "'filter'", "'<='", "'<'", 
                            "'>='", "'>'", "'<>'", "'par'", "'=='", "'pre'", 
                            "'not'", "'card'", "'or'", "'^'", "'mod'", "'exp'", 
                            "'log'", "'log10'", "'cos'", "'acos'", "'sin'", 
                            "'asin'", "':'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "IDENT", "USER_KEYWORD", "BOM", 
                             "WS", "LINE_COMMENT", "ML_COMMENT", "STRING", 
                             "UNSIGNED_NUMBER" ];
    static ruleNames = [ "definition", "dependency", "definition_type", 
                         "element_def", "class_def", "uninstantiated_def", 
                         "static_qualifier", "category", "category_pair", 
                         "var_def", "operator", "template", "class_params", 
                         "operator_def", "apply_category", "type_def", "class_var_def", 
                         "var_qualifier", "arg_list", "crml_component_reference", 
                         "type", "builtin_type", "structure_type", "external_type", 
                         "boolean_value", "constant", "time", "set_def", 
                         "empty_set", "sub_exp", "trim", "sum", "proj", 
                         "when_exp", "integrate", "tick", "exp", "if_exp", 
                         "constructorRule", "period_op", "op", "right_op", 
                         "builtin_op", "array_subscripts", "subscript", 
                         "id", "user_keyword", "comment", "number", "string" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = crmlParser.ruleNames;
        this.literalNames = crmlParser.literalNames;
        this.symbolicNames = crmlParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 36:
    	    		return this.exp_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    exp_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 14);
    		case 1:
    			return this.precpred(this._ctx, 12);
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 16);
    		case 4:
    			return this.precpred(this._ctx, 11);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, crmlParser.RULE_definition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.definition_type();
	        this.state = 101;
	        this.id();
	        this.state = 102;
	        this.match(crmlParser.T__0);
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5 || _la===90) {
	            this.state = 103;
	            this.dependency();
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 109;
	        this.match(crmlParser.T__1);
	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 11)) & ~0x1f) === 0 && ((1 << (_la - 11)) & 536496397) !== 0) || _la===90 || _la===94) {
	            this.state = 110;
	            this.element_def();
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 116;
	        this.match(crmlParser.T__2);
	        this.state = 117;
	        this.match(crmlParser.T__3);
	        this.state = 118;
	        this.match(crmlParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dependency() {
	    let localctx = new DependencyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, crmlParser.RULE_dependency);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 90:
	            this.state = 120;
	            this.id();
	            break;
	        case 5:
	            this.state = 121;
	            this.match(crmlParser.T__4);
	            this.state = 122;
	            this.match(crmlParser.T__1);
	            this.state = 123;
	            this.id();
	            this.state = 128;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 124;
	                this.match(crmlParser.T__5);
	                this.state = 125;
	                this.id();
	                this.state = 130;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 131;
	            this.match(crmlParser.T__2);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 135;
	        this.match(crmlParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition_type() {
	    let localctx = new Definition_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, crmlParser.RULE_definition_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1792) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element_def() {
	    let localctx = new Element_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, crmlParser.RULE_element_def);
	    try {
	        this.state = 147;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 94:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 139;
	            this.comment();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 140;
	            this.template();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 141;
	            this.class_def();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 142;
	            this.uninstantiated_def();
	            break;
	        case 25:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 143;
	            this.type_def();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 144;
	            this.operator();
	            break;
	        case 28:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	        case 38:
	        case 39:
	        case 90:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 145;
	            this.var_def();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 146;
	            this.category();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_def() {
	    let localctx = new Class_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, crmlParser.RULE_class_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(crmlParser.T__10);
	        this.state = 150;
	        this.id();
	        this.state = 151;
	        this.match(crmlParser.T__0);

	        this.state = 152;
	        this.match(crmlParser.T__1);
	        this.state = 154; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 153;
	            this.class_var_def();
	            this.state = 156; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 13)) & ~0x1f) === 0 && ((1 << (_la - 13)) & 134144001) !== 0) || _la===90 || _la===94);
	        this.state = 158;
	        this.match(crmlParser.T__2);
	        this.state = 167;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 159;
	            this.match(crmlParser.T__11);
	            this.state = 160;
	            this.type();
	            this.state = 162;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16) {
	                this.state = 161;
	                this.class_params();
	            }

	            this.state = 165;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===90) {
	                this.state = 164;
	                this.id();
	            }

	        }

	        this.state = 169;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	uninstantiated_def() {
	    let localctx = new Uninstantiated_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, crmlParser.RULE_uninstantiated_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.static_qualifier();
	        this.state = 190;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	        case 38:
	        case 39:
	        case 90:
	            this.state = 172;
	            this.type();
	            this.state = 173;
	            this.id();
	            this.state = 178;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 174;
	                this.match(crmlParser.T__5);
	                this.state = 175;
	                this.id();
	                this.state = 180;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 11:
	        case 25:
	            this.state = 181;
	            this.structure_type();
	            this.state = 182;
	            this.id();
	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 183;
	                this.match(crmlParser.T__5);
	                this.state = 184;
	                this.id();
	                this.state = 189;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 192;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	static_qualifier() {
	    let localctx = new Static_qualifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, crmlParser.RULE_static_qualifier);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.match(crmlParser.T__12);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	category() {
	    let localctx = new CategoryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, crmlParser.RULE_category);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 196;
	        this.match(crmlParser.T__13);
	        this.state = 197;
	        this.id();
	        this.state = 198;
	        this.match(crmlParser.T__14);
	        this.state = 199;
	        this.match(crmlParser.T__1);
	        this.state = 200;
	        this.category_pair();
	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 201;
	            this.match(crmlParser.T__5);
	            this.state = 202;
	            this.category_pair();
	            this.state = 207;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 208;
	        this.match(crmlParser.T__2);
	        this.state = 209;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	category_pair() {
	    let localctx = new Category_pairContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, crmlParser.RULE_category_pair);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 211;
	        this.match(crmlParser.T__15);
	        this.state = 212;
	        this.op();
	        this.state = 213;
	        this.match(crmlParser.T__5);
	        this.state = 214;
	        this.op();
	        this.state = 215;
	        this.match(crmlParser.T__16);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	var_def() {
	    let localctx = new Var_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, crmlParser.RULE_var_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 218;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 217;
	            this.var_qualifier();
	        }

	        this.state = 220;
	        this.type();
	        this.state = 221;
	        this.id();
	        this.state = 228;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 16:
	        	this.state = 222;
	        	this.arg_list();
	        	break;
	        case 1:
	        	this.state = 223;
	        	this.match(crmlParser.T__0);
	        	this.state = 226;
	        	this._errHandler.sync(this);
	        	switch(this._input.LA(1)) {
	        	case 2:
	        	case 16:
	        	case 20:
	        	case 21:
	        	case 24:
	        	case 29:
	        	case 40:
	        	case 41:
	        	case 42:
	        	case 43:
	        	case 44:
	        	case 45:
	        	case 46:
	        	case 48:
	        	case 50:
	        	case 51:
	        	case 52:
	        	case 53:
	        	case 55:
	        	case 56:
	        	case 58:
	        	case 61:
	        	case 62:
	        	case 63:
	        	case 64:
	        	case 65:
	        	case 66:
	        	case 67:
	        	case 68:
	        	case 69:
	        	case 70:
	        	case 71:
	        	case 72:
	        	case 73:
	        	case 74:
	        	case 75:
	        	case 76:
	        	case 77:
	        	case 78:
	        	case 79:
	        	case 80:
	        	case 81:
	        	case 82:
	        	case 83:
	        	case 84:
	        	case 85:
	        	case 86:
	        	case 87:
	        	case 88:
	        	case 90:
	        	case 91:
	        	case 96:
	        	case 97:
	        	    this.state = 224;
	        	    this.exp(0);
	        	    break;
	        	case 18:
	        	    this.state = 225;
	        	    localctx.is_external = this.match(crmlParser.T__17);
	        	    break;
	        	default:
	        	    throw new antlr4.error.NoViableAltException(this);
	        	}
	        	break;
	        case 4:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 230;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operator() {
	    let localctx = new OperatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, crmlParser.RULE_operator);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 232;
	        this.match(crmlParser.T__18);
	        this.state = 233;
	        this.match(crmlParser.T__19);
	        this.state = 234;
	        this.type();
	        this.state = 235;
	        this.match(crmlParser.T__20);
	        this.state = 236;
	        this.operator_def();
	        this.state = 237;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	template() {
	    let localctx = new TemplateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, crmlParser.RULE_template);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 239;
	        this.match(crmlParser.T__21);
	        this.state = 242; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 242;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 90:
	                this.state = 240;
	                this.id();
	                break;
	            case 91:
	                this.state = 241;
	                this.user_keyword();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 244; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===90 || _la===91);
	        this.state = 246;
	        this.match(crmlParser.T__14);
	        this.state = 247;
	        this.exp(0);
	        this.state = 248;
	        this.match(crmlParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_params() {
	    let localctx = new Class_paramsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, crmlParser.RULE_class_params);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 250;
	        this.match(crmlParser.T__15);
	        this.state = 255; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 251;
	            this.id();
	            this.state = 252;
	            this.match(crmlParser.T__14);
	            this.state = 253;
	            this.exp(0);
	            this.state = 257; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===90);
	        this.state = 259;
	        this.match(crmlParser.T__16);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operator_def() {
	    let localctx = new Operator_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, crmlParser.RULE_operator_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 265; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 265;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 30:
	            case 31:
	            case 32:
	            case 33:
	            case 34:
	            case 35:
	            case 36:
	            case 37:
	            case 38:
	            case 39:
	            case 90:
	                this.state = 261;
	                this.type();
	                this.state = 262;
	                this.id();
	                break;
	            case 91:
	                this.state = 264;
	                this.user_keyword();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 267; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 30)) & ~0x1f) === 0 && ((1 << (_la - 30)) & 1023) !== 0) || _la===90 || _la===91);
	        this.state = 269;
	        this.match(crmlParser.T__14);
	        this.state = 271;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===23) {
	            this.state = 270;
	            this.apply_category();
	        }

	        this.state = 273;
	        this.exp(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	apply_category() {
	    let localctx = new Apply_categoryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, crmlParser.RULE_apply_category);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 275;
	        this.match(crmlParser.T__22);
	        this.state = 276;
	        localctx.assoc = this.id();
	        this.state = 277;
	        this.match(crmlParser.T__23);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_def() {
	    let localctx = new Type_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, crmlParser.RULE_type_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 279;
	        this.match(crmlParser.T__24);
	        this.state = 280;
	        this.id();
	        this.state = 289;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 281;
	            this.match(crmlParser.T__11);
	            this.state = 282;
	            this.type();
	            this.state = 284;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16) {
	                this.state = 283;
	                this.arg_list();
	            }

	            this.state = 287;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	            if(la_===1) {
	                this.state = 286;
	                this.id();

	            }
	        }

	        this.state = 299;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 291;
	            this.match(crmlParser.T__1);
	            this.state = 295;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 13)) & ~0x1f) === 0 && ((1 << (_la - 13)) & 134144001) !== 0) || _la===90 || _la===94) {
	                this.state = 292;
	                this.class_var_def();
	                this.state = 297;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 298;
	            this.match(crmlParser.T__2);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


